[package]
name = "crucible-fio-rig"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.68", features = ["backtrace"] }
argh = "0.1.10"
blake3 = "1.3.3"
camino = "1.1.2"
cargo-edit = "0.11.7"
futures = "0.3.26"
rand = "0.8.5"
reqwest = { version = "0.11.14", features = ["blocking"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tempfile = "3.3.0"
tokio = { version = "1.25.0", features = ["full"] }
tokio-serde = { version = "0.8.0", features = ["messagepack"] }
tokio-util = { version = "0.7.4", features = ["codec", "full"] }
toml_edit = "0.18"  # this needs to match whatever cargo-edit is using.

# tokio-serial doesn't build on illumos
[target.'cfg(target_os = "linux")'.dependencies]
tokio-serial = { version = "5.4.4", features = ["codec", "libudev", "tokio-util", "rt"] }

# condition fio_rig_server on tokio-serial getting pulled in so that it
# doesn't build on illumos. this binary is the half that runs on the
# linux VM.
[[bin]]
name = "fio_rig_server"
required-features = ["tokio-serial/codec"]
