[package]
name = "crucible-fio-rig"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.68", features = ["backtrace"] }
argh = "0.1.10"
blake3 = "1.3.3"
camino = "1.1.2"
cargo-edit = "0.11.7"
futures = "0.3.26"
rand = "0.8.5"
reqwest = { version = "0.11.14", features = ["blocking"] }
serde = { version = "1.0.152", features = ["derive"] }
tempfile = "3.3.0"
tokio = { version = "1.25.0", features = ["full"] }
tokio-serde = { version = "0.8.0", features = ["messagepack"] }
tokio-serial = { version = "5.4.4", features = ["codec", "libudev", "tokio-util", "rt"] }
tokio-util = { version = "0.7.4", features = ["codec", "full"] }
toml_edit = "0.18"  # this needs to match whatever cargo-edit is using.
